# gozdzikowa

./: README.md  interaction_network.ipynb  pyproject.toml  table_generator.ipynb  uniprot_fetching.ipynb
data/: 1215092.tsv  226185.tsv  272620.tsv  272634.tsv  43263.tsv  533.tsv  561307.tsv  562.tsv  573.tsv  83333.tsv  93061.tsv  taxonomy-ancestor_562.tab  uniprot_data.tsv
data/562_ancestors/: 1005567.tsv  1045010.tsv  1055537.tsv  1055538.tsv  1078021.tsv  1078034.tsv  1116036.tsv  1116133.tsv  1116136.tsv  1133852.tsv  1144303.tsv  1165939.tsv  1169333.tsv  1169353.tsv  1181728.tsv  1181739.tsv  1182680.tsv  1182682.tsv  1182704.tsv  1182710.tsv  1182725.tsv  1200752.tsv  1268976.tsv  1268978.tsv  1268982.tsv  1268986.tsv  1268989.tsv  1268991.tsv  1268995.tsv  1268998.tsv  1269000.tsv  1269007.tsv  1280961.tsv  1280986.tsv  1281169.tsv  1281200.tsv  1281213.tsv  1281275.tsv  1311757.tsv  1400022.tsv  (+101 more)
results/226185/: 226185.gml  226185_cytascope.cys  226185_mcode_results.txt  226185_network_analysis.csv
results/272620/: 272620.cys  272620.gml  272620_mcode_results.txt  272620_network_analysis.csv
results/272634/: 272634.gml  272634_cytoscape.cys  272634_mcode_results.txt  272634_network_analysis.csv
results/43263/: 43263.gml  43263_cytoscape.cys  43263_mcode_results.txt  43263_network_analysis.csv
results/83333/: 83333.cys  83333.gml  83333_mcode_results.txt  83333_network_analysis.csv
results/93061/: 93061.gml  93061_cytascope.cys  93061_mcode_results.txt  93061_network_analysis.csv
